[package]
name = "yai"
version = "0.1.3"
edition = "2021"
description = "Yet Another Injector for windows x64 dlls."
repository = "https://github.com/0xFounders/yai"
license = "MIT"

[[bin]]
name = "yai"
required-features = ["cli"]

[features]
default = ["cli"]
cli = ["clap"]

[dependencies]
clap = { version = "4.5.4", features = ["derive"], optional = true }
log = "0.4.21"
pretty_env_logger = "0.4.0"
thiserror = "1.0.61"
sysinfo = "0.26.9"
windows-sys = { version = "0.48.0", features = [
    "Win32_Foundation",
    "Win32_System_Memory",
    "Win32_System_Threading",
    "Win32_Security",
    "Win32_System_LibraryLoader",
    "Win32_System_Diagnostics_Debug",
] }
